<resources>
    <!--    <string name="app_name">TPAMobile</string>-->
    <!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string-array name="list_name">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <!--    <string name="title_activity_add_category">AddCategoryActivity</string>-->
    <!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
    <!--    <string name="first_fragment_label">First Fragment</string>-->
    <!--    <string name="second_fragment_label">Second Fragment</string>-->
    <!--    <string name="next">Next</string>-->
    <!--    <string name="previous">Previous</string>-->

    <!--    <string name="hello_first_fragment">Hello first fragment</string>-->
    <!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
    <string name="sign_up">"Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="hello">Hey there ✋</string>
    <string name="what_email">What is your email address?</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="what_password">What is your password?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="continue_btn">Continue</string>
    <string name="see_all">See all</string>
    <string name="my_wallet">My Wallet</string>
    <string name="spending_report">Spending Report</string>
    <string name="see_reports">See reports</string>
    <string name="recent_transaction">Recent Transactions</string>
    <string name="bills">Bills</string>
    <string name="budget">Budgets</string>
    <string name="select_category">Select Category</string>
    <string name="bill_description">Bill Description</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="select_date">Select Date</string>
    <string name="repeat_until">Repeat until n occurrence(s)</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="save">Save</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="budget_category">Budget Category</string>
    <string name="category_name">Category Name</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="write_note">Write Note</string>
    <string name="today">Today</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="bill_date">Bill Date</string>
    <string name="delete">Delete</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_profile">Update profile</string>
    <string name="category">Category</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="amount">Amount</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_wallet">Transaction Wallet</string>
    <string name="total_overdue">Total overdue</string>
    <string name="this_month">This month</string>
    <string name="add">Add</string>
    <string name="select_month">Select month:</string>
    <string name="balance">Balance</string>
    <string name="wallet">Dompet</string>
    <string name="input_old_pass">Input your old password</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading</string>
    <string name="saving">Saving..</string>
    <string name="checking">Checking..</string>
    <string name="every_week">Every Week</string>
    <string name="every_month">Every Month</string>
    <string name="every_year">Every Year</string>
    <string name="once_only">Once Only</string>
    <string name="fetching">Fetching..</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="plan">Plan</string>
    <string name="transaction">Transaction</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="last_month">Last Month</string>
    <string name="note">Note</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="validation_before_edit">Validation Before Edit</string>
    <string name="pay">PAY</string>
    <string name="paid">PAID</string>
    <string name="my_account">My Account</string>
    <string name="due">Due </string>
    <string name="sign_out">Sign Out</string>
    <string name="due_today">Due today</string>
    <string name="was_due_on">Was due on </string>
    <string name="total_spend_this_month">Total spend this month</string>
    <string name="notification">Notification</string>
    <string name="failed_to_fetch">Failed to fetch</string>
    <string name="success">Success</string>
    <string name="account_created">Account Created...</string>
    <string name="existing_user">Existing User...</string>
    <string name="deleted">Deleted</string>
    <string name="old_password">Old Password</string>
    <string name="edit">Edit</string>
    <string name="mark_as_unpaid">Mark as unpaid</string>
    <string name="message">New transaction successfully added</string>

    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string-array name="repeat_values">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
</resources>