<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.bill.BillsFragment"
    android:background="@color/gray_200"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_overdue"
                android:textColor="@color/gray_800"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:layout_alignParentRight="true"
                android:id="@+id/tv_overdue_amount"
                android:textColor="@color/gray_800"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_month"
                android:textColor="@color/gray_800"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:layout_alignParentRight="true"
                android:id="@+id/tv_this_month_amount"
                android:textColor="@color/gray_800"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textColor="@color/gray_800"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:layout_alignParentRight="true"
                android:id="@+id/tv_today_amount"
                android:textColor="@color/gray_800"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="4dp">
        <Button
            android:id="@+id/btn_add_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_month"
                android:textColor="@color/gray_800"
                android:paddingTop="4dp"
                android:textSize="16dp"/>
            <Button
                android:id="@+id/btn_month_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="select month"
                android:textColor="@color/gray_800"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_bills"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>