<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:id="@+id/card_view"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/category_card"
                android:layout_width="170dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="68dp"
                android:text="@string/category"
                android:textColor="@color/black" />

<!--            <TextView-->
<!--                android:id="@+id/finished_status_card"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="20dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:textColor="@color/black"-->
<!--                android:text="finished"-->
<!--                android:gravity="end|center_vertical"/>-->
            <Button
                android:id="@+id/finished_status_card"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:text="@string/pay"
                android:textSize="12dp"
                android:layout_alignParentRight="true"
                android:textAlignment="center" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bill_due"
                android:layout_width="170dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="68dp"
                android:textColor="@color/gray_400"
                android:text="@string/due"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/price_card"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:text="Rpxxxxxx"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>